# tfg

./: .gitignore  .gitmodules  LICENSE  Makefile  PKGBUILD  README.md  howdy-gesture-tfg.install  logs.md  pyproject.toml  requirements-py310.txt
.github/workflows/: publish-aur.yml  test-install.yml
notebooks/: mediapipe.ipynb  notification.ipynb
notebooks/benchmarking/: face_recognition_comparison.ipynb
src/: Authenticate.py  Config.py  compare.py  config.ini  dbus_notification.c  dbus_notification.py  gesture-config.py  gesture-only.py  message_print.py  palm_pass_authenticator.py  palm_pass_hints.py  pam_gesture.c
