[project]
name = "tfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "click>=8.3.1",
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "ipykernel>=7.2.0",
    "mediapipe>=0.10.21",
    "mediapipe-model-maker>=0.2.1.4",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.1",
    "setuptools>=65.0.0,<72.0.0",
]
